k8s/result.template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result-deployment
spec:
  replicas: 2 # for redundancy and high availability
  selector:
    matchLabels:
      app: result
  template:
    metadata:
      labels:
        app: result
    spec:
      containers:
      - name: result-container
        image: najjaved/result:${IMAGE_TAG}
        ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: result-service
spec:
  selector:
    app: result
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
