k8s/vote.template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote-deployment
spec:
  replicas: 2 # for redundancy
  selector:
    matchLabels:
      app: vote
  template:
    metadata:
      labels:
        app: vote
    spec:
      containers:
      - name: vote-container
        image: najjaved/vote:${IMAGE_TAG}
        ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: vote-service
spec:
  selector:
    app: vote
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80  
  type: ClusterIP
