k8s/ingress-vote-app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vote-app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /vote
            pathType: Prefix
            backend:
              service:
                name: vote-service
                port:
                  number: 80
          - path: /result
            pathType: Prefix
            backend:
              service:
                name: result-service
                port:
                  number: 80
          - path: /
            pathType: Exact
            backend:
                service:
                  name: vote-service
                  port:
                    number: 80
